Closed Bug 1938101 Opened 8 months ago Closed 4 months ago

[KDE][X11] Firefox will freeze and get unresponsive when dragging and marking text (video included)

Categories

(Core :: Widget: Gtk, defect)

Firefox 133
defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox140 --- fixed

People

(Reporter: tehybel, Assigned: stransky, NeedInfo)

Details

Attachments

(4 files)

Bug 1917854 is not actually fixed, as far as I can see. Dragging text or images still freezes up the browser for 5-15 seconds -- shorter than before, but still quite bad. (I don't seem to have permissions to reopen that bug, so I'm making a copy - please let me know if this is the wrong way to handle things.)

Tested on firefox-133.0.3-2. (The fixes from 1917854 should be in this version, correct?)

Flags: needinfo?(stransky)

Yes, complete fix will come in 134.0. Please test latest nightly:
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Testing_Mozilla_Nightly_binaries
Thanks.

Flags: needinfo?(stransky) → needinfo?(tehybel)

Note that Bug 1917854 is marked fixed for 135.0.

(In reply to Martin Stránský [:stransky] (ni? me) from comment #1)

Yes, complete fix will come in 134.0. Please test latest nightly:
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Testing_Mozilla_Nightly_binaries
Thanks.

I can still trigger the bug in the newest nightly: 135.0a1 (2024-12-18) (64-bit)

However it's much harder to trigger, requiring more drag-and-drops. Also, I have to restart firefox after the bug's first occurrence, otherwise I cannot reproduce it again.

See the attached video where I trigger the bug twice - the first time it freezes for about 3 seconds, then I restart Firefox, then it takes a lot of tries but finally it freezes for 10-15ish seconds.

.. Video was too big to attach, so I put it on youtube: https://youtu.be/NAhW2TES53s -- HD version should be ready in 20 minutes or so.

Flags: needinfo?(tehybel) → needinfo?(stransky)

(In reply to Thomas from comment #3)

.. Video was too big to attach, so I put it on youtube: https://youtu.be/NAhW2TES53s -- HD version should be ready in 20 minutes or so.

Direct link: https://drive.google.com/file/d/1c5VOb8r7d7nTUOc3rCdAVC4TbNF3xS1o/view?usp=sharing

Thanks. Can you please attach log produced by

MOZ_LOG="WidgetDrag:5" firefox > log.txt 2>&1 

so we can see what's the issue?
Thanks.

Flags: needinfo?(stransky) → needinfo?(tehybel)

Redirect a needinfo that is pending on an inactive user to the triage owner.
:stransky, since the bug has recent activity, could you please find another way to get the information or close the bug as INCOMPLETE if it is not actionable?

For more information, please visit BugBot documentation.

Flags: needinfo?(tehybel) → needinfo?(stransky)
Flags: needinfo?(stransky)

Hi, this is still a problem for me. I can confirm it is also harder to reproduce than last time, but it is nevertheless very much a present issue and happens relatively frequently. It completely freezes/locks up the browser -- I have had it happen when dragging images/text. I attached a video showing the issue

Attaching a set of logs produced by MOZ_LOG="WidgetDrag:5" firefox > log.txt 2>&1 -- I had to drag a couple of times to get it to trigger in that session, towards the end of that session is when I experienced the issue if that helps clarify where in the logs the issue occurred

Attached file log.txt

FYI I am on Mozilla Firefox 136.0.2, Linux kernel version 6.13.7, on the X11 windowing system

Flags: needinfo?(stransky)

Yes, looks like there's the freeze according to the 'doing iteration, mWaitingForDragDataRequests 1' lines. I'll look at it.
Which desktop so you use?

Flags: needinfo?(nodeadbatteries)

(In reply to Martin Stránský [:stransky] (ni? me) from comment #12)

Yes, looks like there's the freeze according to the 'doing iteration, mWaitingForDragDataRequests 1' lines. I'll look at it.
Which desktop so you use?

I use the i3 window manager, version 4.24

Thanks for taking a look!!

Flags: needinfo?(stransky)
Flags: needinfo?(nodeadbatteries)
Flags: needinfo?(stransky)
Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/4fd43e2347fc [Linux] Use widget.gtk.clipboard_timeout_ms pref for Gtk clipboard timeout r=emilio https://hg.mozilla.org/integration/autoland/rev/1c5f8d98e479 [Linux] Track waiting D&D operations and don't start more than one r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
QA Whiteboard: [qa-triage-done-c141/b140] [qa-verif-needed-c141/b140]
Flags: qe-verify+
QA Whiteboard: [qa-triage-done-c141/b140] [qa-verif-needed-c141/b140] → [qa-triage-done-c141/b140] [qa-ver-needed-c141/b140]
QA Contact: bmaris

I have an old'ish Kubuntu as a VM here with KDE 5.15.13 and I have freshly installed i3 (v4.24) on it, unfortunately I can't reproduce the freeze of the browser when using a build before the fix. Not sure if a newer kde version is needed or maybe Fedora (I tried to install it in Virtual Box and VMware but for some reason it will not install, weird).
That being said, would any of you mind verifying that if using this build https://archive.mozilla.org/pub/firefox/candidates/140.0b4-candidates/build1/linux-x86_64/en-US/ this is fixed for you?

Flags: needinfo?(tehybel)
Flags: needinfo?(nodeadbatteries)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: