Bug 1938101 [Linux] Track waiting D&D operations and don't start more than one r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D246411